login page + dashboard page

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,31 @@
-<p>dashboard works!</p>
+<div class="container">
+    <h1>Welcome to our Programming Learning Site</h1>
+    <h2>Choose a language to learn</h2>
+    <div class="tile-container">
+      <a href="#" class="tile tile1">
+        <h3>JavaScript</h3>
+      </a>
+      <a href="#" class="tile tile2">
+        <h3>Python</h3>
+      </a>
+      <a href="#" class="tile tile3">
+        <h3>C++</h3>
+      </a>
+      <a href="#" class="tile tile4">
+        <h3>Java</h3>
+      </a>
+      <a href="#" class="tile tile5">
+        <h3>Swift</h3>
+      </a>
+      <a href="#" class="tile tile6">
+        <h3>PHP</h3>
+      </a>
+      <a href="#" class="tile tile7">
+        <h3>Ruby</h3>
+      </a>
+      <a href="#" class="tile tile8">
+        <h3>C#</h3>
+      </a>
+    </div>
+  </div>
+  
