dashboard and show topic

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <h1>Welcome to our Programming Learning Site</h1>
     <h2>Choose a language to learn</h2>
     <div class="tile-container">
-      <a href="#" class="tile tile1">
+      <a (click) = "goto()" class="tile tile1">
         <h3>JavaScript</h3>
       </a>
       <a href="#" class="tile tile2">
