--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,3 +22,6 @@
     /* background-image: url('assets/background.jpg'); */
     background-size: cover;
   }
+  .navbar-nav-logout{
+    margin-left: auto;
+  }
